[EFL] [WK2] ASSERTION FAILED: !HashTranslator::equal(KeyTraits::emptyValue(), key) https://bugs.webkit.org/show_bug.cgi?id=90464

Patch by Sudarsana Nagineni <sudarsana.nagineni@linux.intel.com> on 2012-07-09
Reviewed by Daniel Bates.

HashMap has the property that 0 is the empty value for integer
keys, so do not use 0 as a key in the HashMap.

* Platform/efl/WorkQueueEfl.cpp:
(WorkQueue::dispatchAfterDelay):

Canonical link: https://commits.webkit.org/108639@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@122136 268f45cc-cd09-0410-ab3c-d52691b4dbfc